services/grafana/envs/developer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
    spec:
      containers:
        - name: grafana
          volumeMounts:
            - name: opsbot-ca-cert
              mountPath: /etc/ssl/certs/ca-certificates.crt
              subPath: opsbot.pem
              readOnly: false
      volumes:
        - name: opsbot-ca-cert
          configMap:
            name: opsbots-tls-ca
