services/grafana/envs/developer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "opsbots"
  labels:
    helm.sh/chart: grafana-6.36.2
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/version: "9.1.1"
    app.kubernetes.io/managed-by: Helm
  name: grafana
  namespace: monitoring
spec:
  rules:
    - host: grafana.lo
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.lo
      secretName: grafana-tls
